--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,6 @@
 // Organizer Page css
 
-.wcorg-organizer:nth-child(2n+1), .wcorg-speaker:nth-child(2n+1) {
+.wcorg-organizer:nth-child(2n+1) {
     clear: both;
 }
 .wcorg-organizer {
