Sponsors Introduction & Bingo CSS

--- a/custom.css
+++ b/custom.css
@@ -30,7 +30,7 @@ text-align: center;
 font-size: 18px;
 margin-top: 15px;}
 
-td.wcb-session-registration-breakfast-bingo, td.wcb-session-speaker-introduction-quiz,
+td.wcb-session-registration-breakfast-bingo, td.wcb-session-sponsors-introduction-bingo, td.wcb-session-speaker-introduction-quiz,
 td.wcb-session-break,
 td.wcb-session-lunch-break,
 td.wcb-session-tea-break,
